--- a/src/components/TodayWeather/index.css
+++ b/src/components/TodayWeather/index.css
@@ -1,12 +1,16 @@
 .main-container {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  padding: 20px;
+  padding: 50px;
+  width: 500px;
+  height: 100%;
+  background-color: #ffffff;
 }
 .weather-container {
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 100%;
   border: 2px solid black;
 }
