--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   width: 100vw;
   min-height: 100vh;
+  height: 100%;
 }
 
 .insights-container {
@@ -8,14 +9,33 @@
   width: 100%;
   padding: 30px;
   height: 100%;
+  border-radius: 0px 20px 20px 0px;
 }
 
 .app-inner-container {
   padding: 50px;
-  display: flex;
+  display: grid;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   border-radius: 60px;
+}
+@media only screen and (max-width: 767px) {
+  .app-inner-container {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .app-inner-container {
+    grid-template-columns: 1fr 2fr;
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .cards-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
