--- a/src/components/TodayWeather/index.css
+++ b/src/components/TodayWeather/index.css
@@ -3,14 +3,44 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 50px;
+  padding: 0px 50px;
   width: 500px;
-  height: 100%;
+  height: 100vh;
   background-color: #ffffff;
+  border-radius: 20px 0px 0px 20px;
 }
 .weather-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.weather-image {
+  width: 300px;
+  height: 200px;
+}
+
+.chance-of-rain {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.location-container {
+  background-image: url("../../../public/place.webp");
+  background-size: cover;
+  width: 80%;
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: invert;
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border-radius: 10px;
+  color: #ffffff;
 }
