--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 }
 
 .insights-container {
-  background-color: #f6f6f8;
   width: 100%;
   padding: 30px;
   height: 100%;
@@ -21,6 +20,16 @@
   min-height: 100vh;
   border-radius: 60px;
 }
+
+.dark {
+  background-color: #000;
+  color: #fff;
+}
+.light {
+  background-color: #fff;
+  color: #000;
+}
+
 @media only screen and (max-width: 767px) {
   .app-inner-container {
     grid-template-columns: 1fr;
