--- a/src/components/TodayWeather/index.css
+++ b/src/components/TodayWeather/index.css
@@ -4,8 +4,8 @@
   justify-content: flex-start;
   align-items: center;
   padding: 0px 50px;
-  width: 500px;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   border-radius: 20px 0px 0px 20px;
 }
 .weather-container {
@@ -17,9 +17,14 @@
   align-items: center;
 }
 
+#search {
+  margin-bottom: 10px;
+}
+
 .weather-image {
   width: 300px;
   height: 200px;
+  border-radius: 20px;
 }
 
 .chance-of-rain {
